# app-store_crawler

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: crawlers.py  main.py  parsers.py  utils.py
tests/data/snapshots/: __init__.py  app_id1193542964.html  app_id363590051.html  base.py
tests/unit/: test_appinfoparser.py  test_parsers.py  test_utils.py
