[tool.poetry]
name = "app-store-crawler"
version = "0.1.0"
description = ""
authors = ["phan2410 <phan2410@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
playwright = "^1.32.1"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
